--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> valyn <br> faer <span>.</span>   </h2>
 							<p>ui/ux designer and web developer</p>
-							<a href="assets/download/browney.txt" download>download cv</a>
+							<a href="assets/download/browney.txt" download>download cV</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
