--- a/index.html
+++ b/index.html
@@ -152,7 +152,13 @@
 								</div>
 							</div>
 						</div>
-						
+						<div class="col-sm-offset-1 col-sm-5">
+							<div class="single-about-img">
+								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								
+							</div>
+
+						</div>
 					</div>
 				</div>
 			</div>
