--- a/index.html
+++ b/index.html
@@ -139,15 +139,10 @@
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>email</h3>
-											<p>browny@info.com</p>
+											<p>valyn.faer@gmail.com</p>
 										</div>
 									</div>
-									<div class="col-sm-4">
-										<div class="single-about-add-info">
-											<h3>website</h3>
-											<p>www.brownsine.com</p>
-										</div>
-									</div>
+									
 								</div>
 							</div>
 						</div>
