updated contact info

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html"></a>
+			                <a class="navbar-brand" href="index.html">valyn</a>
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
 
@@ -578,8 +578,8 @@
 							<div class="single-contact-box">
 								<div class="contact-adress">
 									<div class="contact-add-head">
-										<h3>browny star</h3>
-										<p>uI/uX designer</p>
+										<h3>valyn faer</h3>
+										<p></p>
 									</div>
 									<div class="contact-add-info">
 										<div class="single-contact-add-info">
@@ -588,11 +588,7 @@
 										</div>
 										<div class="single-contact-add-info">
 											<h3>email</h3>
-											<p>browny@info.com</p>
-										</div>
-										<div class="single-contact-add-info">
-											<h3>website</h3>
-											<p>www.brownsine.com</p>
+											<p>valyn.faer@gmail.com</p>
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
