--- a/index.html
+++ b/index.html
@@ -250,7 +250,14 @@
 								<div class="single-skill-content">
 									<div class="barWrapper">
 										<span class="progressText">adobe photoshop</span>
-										
+										<div class="single-progress-txt">
+											<div class="progress ">
+												<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
+													  
+												</div>
+											</div>
+											<h3>90%</h3>	
+										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
 										<span class="progressText">adobe illustrator</span>
