--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Valyn
+                        <span class="text-primary">Faer</span>
                     </h1>
                     <div class="subheading mb-5">
                         <a href="valyn.faer@gmail.com">valyn.faer@gmail.com</a>
