--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Faer</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <a href="valyn.faer@gmail.com">valyn.faer@gmail.com</a>
+                        <a href="mailto:valyn.faer@gmail.com">valyn.faer@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     
