--- a/index.html
+++ b/index.html
@@ -57,20 +57,30 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Lund University</h3>
+                            <div class="subheading mb-3">Master of Science in Sociology</div>
+                            <div>Research focus: women, gender studies, and transgender studies</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022 - 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">University of Oregon</h3>
+                            <div class="subheading mb-3">Bachelor of Arts in Sociology</div>
+			    <div>Area of focus: gender and inequality</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2009 - 2012</span></div>
+                    </div>
+		    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Mesa Community College</h3>
+                            <div class="subheading mb-3">Associate of Arts</div>
+			    <div>Area of focus: general studies</div>
+                            <p></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2006 - 2009</span></div>
                     </div>
                 </div>
             </section>
