--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2009 - 2012</span></div>
                     </div>
-		    <div class="d-flex flex-column flex-md-row justify-content-between">
+		    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Mesa Community College</h3>
                             <div class="subheading mb-3">Associate of Arts</div>
