--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <h2 class="mb-5">Publications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <a href="http://lup.lub.lu.se/student-papers/record/9156036">“I had to qualify my belonging to the group”: Trans women's experiences of gendered boundary work and the symbolic boundaries of womanhood.</a>
+                            Faer, V. O. (2024). “I had to qualify my belonging to the group”: Trans women’s experiences of gendered boundary work and the symbolic boundaries of womanhood. <a href="http://lup.lub.lu.se/student-papers/record/9156036">http://lup.lub.lu.se/student-papers/record/9156036.</a>
                         </li>
                     </ul>
                 </div>
