--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Patient Access Representative</h3>
-                            <div class="subheading mb-3">PeaceHealth Hospital, Springfield and Eugene, OR</div>
+                            <div class="subheading mb-3">PeaceHealth Sacred Heart Hospital, Springfield and Eugene, OR</div>
                             <p>Description of job.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2018 - 07/2022</span></div>
@@ -150,12 +150,36 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Job title</h3>
-                            <div class="subheading mb-3">Employer</div>
+                            <h3 class="mb-0">Interviewer and Data Collector</h3>
+                            <div class="subheading mb-3">Venture Data, Eugene, OR</div>
                             <p>Job description.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">07/2014 - 01/2016</span></div>
                     </div>
+		     <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Credit Representative</h3>
+                            <div class="subheading mb-3">Hawes Financial Group, Springfield, OR</div>
+                            <p>Job description.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">07/2013 - 06/2014</span></div>
+                     </div>
+		     <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Library Student Assistant 3 and Digital Collections Student Assistant</h3>
+                            <div class="subheading mb-3">University of Oregon, Knight Library, Eugene, OR</div>
+                            <p>Job description.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">09/2010 - 09/2012</span></div>
+                     </div>
+		     <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Student Services Assistant</h3>
+                            <div class="subheading mb-3">Mesa Community College, Student Services Office, Mesa, AZ</div>
+                            <p>Job description.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">05/2006 - 08/2009</span></div>
+                      </div>
                 </div>
             </section>
             <hr class="m-0" />
