--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">01/2016 - 10/2017</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Interviewer and Data Collector</h3>
                             <div class="subheading mb-3">Venture Data, Eugene, OR</div>
@@ -156,7 +156,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">07/2014 - 01/2016</span></div>
                     </div>
-		     <div class="d-flex flex-column flex-md-row justify-content-between">
+		     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Credit Representative</h3>
                             <div class="subheading mb-3">Hawes Financial Group, Springfield, OR</div>
@@ -164,7 +164,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">07/2013 - 06/2014</span></div>
                      </div>
-		     <div class="d-flex flex-column flex-md-row justify-content-between">
+		     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Library Student Assistant 3 and Digital Collections Student Assistant</h3>
                             <div class="subheading mb-3">University of Oregon, Knight Library, Eugene, OR</div>
@@ -172,7 +172,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2010 - 09/2012</span></div>
                      </div>
-		     <div class="d-flex flex-column flex-md-row justify-content-between">
+		     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student Services Assistant</h3>
                             <div class="subheading mb-3">Mesa Community College, Student Services Office, Mesa, AZ</div>
