--- a/index.html
+++ b/index.html
@@ -64,24 +64,33 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Types of skills or software</div>
-                    <div class="subheading mb-3">Workflow (change name?)</div>
+                    #<div class="subheading mb-3">Workflow (change name?)</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Skill 1
+                            Qualitative and quantitative research and analysis skills; proficient in NVivo, SPSS, Excel
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Skill 2
+                            Strong organizational and time management skills, experienced in project management
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Skill 3
+                            Flexible, self-motivating, and able to efficiently manage multiple tasks and projects at once
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Skill 4
+                            Skilled with presentations, technical writing, critical thinking, and data management
                         </li>
+			 <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Ability to collaborate effectively with diverse teams in fast-paced and dynamic environments
+                        </li>
+			 <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Excellent verbal/written communication skills and exceptional stakeholder management skills
+                        </li>
+
                     </ul>
                 </div>
             </section>
