--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Types of skills or software</div>
-                    #<div class="subheading mb-3">Workflow (change name?)</div>
+                    <!--<div class="subheading mb-3">Workflow (change name?)</div>-->
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
