--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </p>
 		  <p class="lead mb-4">With my academic foundation in sociology, I bring an additional layer of understanding to the social and structural factors that can impact an organization’s business or clients. This background has refined my analytical and problem-solving skills, enabling me to recognize patterns, advocate for solutions, and support a diverse range of individuals effectively. This background has also refined my quantitative and qualitative research skills and has further honed my project management skills. I am confident in my ability to integrate this knowledge with my practical experience, fostering positive outcomes for the communities, businesses, and individuals I support.
 </p>
-		  <p class="lead mb-4">I am thrilled about the opportunity to bring my unique blend of education and experience to your organization and am eager to start the next phase of my professional journey. Thank you for considering my application. I look forward to the opportunity to discuss how my background and skills align with your needs.
+		  <p class="lead mb-4">I am thrilled about the opportunity to bring my unique blend of education and experience to your organization and am eager to start the next phase of my professional journey. Thank you for taking the time to view my webpage. If you feel I would be a good fit for any open positions you are looking to fill please don't hesitate to contact me.
 </p>
                 </div>
             </section>
