--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Types of skills or software</div>
+                    <div class="subheading mb-3">Types of skills and software</div>
                     <!--<div class="subheading mb-3">Workflow (change name?)</div>-->
                     <ul class="fa-ul mb-0">
                         <li>
@@ -197,8 +197,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a (mention interests).</p>
-                    <p class="mb-0">When forced indoors, (more interests).</p>
+                    <p>Apart from being a sociology nerd, I enjoy going on hikes and exploring nature.</p>
+                    <p class="mb-0">When forced indoors, I enjoy reading sociology books and sci-fi novels, listening to music, and watching sci-fi films.</p>
                 </div>
             </section>
             <hr class="m-0" />
