--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Patient Access Representative</h3>
                             <div class="subheading mb-3">PeaceHealth Sacred Heart Hospital, Springfield and Eugene, OR</div>
-                            <p>Description of job.</p>
+                            <p>Job description coming soon.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2018 - 07/2022</span></div>
                     </div>
@@ -145,7 +145,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Direct Support Professional</h3>
                             <div class="subheading mb-3">Alvord Taylor, Eugene, OR</div>
-                            <p>Job description.</p>
+                            <p>Job description coming soon.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2017 - 11/2017</span></div>
                     </div>
@@ -153,7 +153,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Direct Support Professional</h3>
                             <div class="subheading mb-3">Oregon Supported Living Program, Eugene, OR</div>
-                            <p>Job description.</p>
+                            <p>Job description coming soon.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">01/2016 - 10/2017</span></div>
                     </div>
@@ -161,7 +161,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Interviewer and Data Collector</h3>
                             <div class="subheading mb-3">Venture Data, Eugene, OR</div>
-                            <p>Job description.</p>
+                            <p>Job description coming soon.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">07/2014 - 01/2016</span></div>
                     </div>
@@ -169,7 +169,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Credit Representative</h3>
                             <div class="subheading mb-3">Hawes Financial Group, Springfield, OR</div>
-                            <p>Job description.</p>
+                            <p>Job description coming soon.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">07/2013 - 06/2014</span></div>
                      </div>
@@ -177,7 +177,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Library Student Assistant 3 and Digital Collections Student Assistant</h3>
                             <div class="subheading mb-3">University of Oregon, Knight Library, Eugene, OR</div>
-                            <p>Job description.</p>
+                            <p>Job description coming soon.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2010 - 09/2012</span></div>
                      </div>
@@ -185,7 +185,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student Services Assistant</h3>
                             <div class="subheading mb-3">Mesa Community College, Student Services Office, Mesa, AZ</div>
-                            <p>Job description.</p>
+                            <p>Job description coming soon.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05/2006 - 08/2009</span></div>
                       </div>
@@ -198,7 +198,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a sociology nerd, I enjoy going on hikes and exploring nature.</p>
-                    <p class="mb-0">When forced indoors, I enjoy reading sociology books and sci-fi novels, listening to music, and watching sci-fi films.</p>
+                    <p class="mb-0">When forced indoors, however, I enjoy reading sociology books and sci-fi novels, listening to an eclectic combination of music, and watching the latest sci-fi films (or rewatching the classics).</p>
                 </div>
             </section>
             <hr class="m-0" />
