--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </p>
 		  <p class="lead mb-4">With my academic foundation in sociology, I bring an additional layer of understanding to the social and structural factors that can impact an organization’s business or clients. This background has refined my analytical and problem-solving skills, enabling me to recognize patterns, advocate for solutions, and support a diverse range of clients and individuals effectively. This background has also refined my quantitative and qualitative research skills and has further honed my project management skills. I am confident in my ability to integrate this knowledge with my practical experience, fostering positive outcomes for the communities, businesses, and individuals I support.
 </p>
-		  <p class="lead mb-4">I am thrilled about the opportunity to bring my unique blend of education and experience to your organization and am eager to start the next phase of my professional journey. Thank you for taking the time to view my webpage. If you feel I would be a good fit for any open positions you are looking to fill please don't hesitate to contact me.
+		  <p class="lead mb-4">I am thrilled about the opportunity to bring my unique blend of education and experience to your organization and am eager to start the next phase of my professional journey. Thank you for taking the time to view my webpage. If you feel I would be a good fit for any of your open positions please don't hesitate to contact me.
 </p>
                 </div>
             </section>
@@ -90,8 +90,22 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Excellent verbal/written communication skills and exceptional stakeholder management skills
                         </li>
-
                     </ul>
+		    <div class="subheading mb-3">Languages</div>
+		    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            English: mother tongue
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Swedish: beginner
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Japanese: beginner
+                        </li>
+		    </ul>
                 </div>
             </section>
             <hr class="m-0" />
