--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                             Excellent verbal/written communication skills and exceptional stakeholder management skills
                         </li>
                     </ul>
+		    <div class="subheading mb-3"></div>	
 		    <div class="subheading mb-3">Languages</div>
 		    <ul class="fa-ul mb-0">
                         <li>
