--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Patient Access Representative</h3>
                             <div class="subheading mb-3">PeaceHealth Sacred Heart Hospital, Springfield and Eugene, OR</div>
-                            <p>Job description coming soon.</p>
+                            <p>Facilitated patient registration, check-in, and scheduling while verifying insurance and obtaining necessary authorizations. Managed patient information, ensuring accuracy and compliance with healthcare privacy regulations. Provided excellent customer service, addressing patient inquiries and resolving issues promptly to enhance patient satisfaction. Collaborated with healthcare teams to streamline patient flow and optimize hospital operations. Utilized electronic health record (EHR) systems to maintain and update patient records.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2018 - 07/2022</span></div>
                     </div>
