--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Direct Support Professional</h3>
                             <div class="subheading mb-3">Alvord Taylor, Eugene, OR</div>
-                            <p>Job description coming soon.</p>
+                            <p>Delivered personalized support to individuals with disabilities, assisting with daily living activities, medication management, and mobility to enhance their independence and well-being. Implemented individualized care plans, facilitated skill-building exercises, and provided emotional support to help clients achieve personal goals and build confidence. Maintained a safe and positive environment by monitoring health and behavioral needs, documenting progress, and collaborating closely with healthcare and support teams to improve clients' quality of life and community integration.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2017 - 11/2017</span></div>
                     </div>
