--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Direct Support Professional</h3>
                             <div class="subheading mb-3">Oregon Supported Living Program, Eugene, OR</div>
-                            <p>Job description coming soon.</p>
+                            <p>Delivered personalized support to individuals with disabilities, assisting with daily living activities, medication management, and mobility to enhance their independence and well-being. Implemented individualized care plans, facilitated skill-building exercises, and provided emotional support to help clients achieve personal goals and build confidence. Maintained a safe and positive environment by monitoring health and behavioral needs, documenting progress, and collaborating closely with healthcare and support teams to improve clients' quality of life and community integration.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">01/2016 - 10/2017</span></div>
                     </div>
@@ -176,7 +176,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Interviewer and Data Collector</h3>
                             <div class="subheading mb-3">Venture Data, Eugene, OR</div>
-                            <p>Job description coming soon.</p>
+                            <p>Conducted structured phone interviews for market research and public opinion surveys, gathering accurate and comprehensive data from diverse respondent groups across various demographics. Ensured adherence to survey protocols by delivering questions with clarity, neutrality, and consistency, while actively engaging respondents to maintain a high response rate and data quality. Recorded and organized responses with attention to detail, safeguarding confidentiality and data integrity. Collaborated with research teams to support data-driven insights and client decision-making through rigorous data collection standards.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">07/2014 - 01/2016</span></div>
                     </div>
@@ -184,7 +184,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Credit Representative</h3>
                             <div class="subheading mb-3">Hawes Financial Group, Springfield, OR</div>
-                            <p>Job description coming soon.</p>
+                            <p>Evaluated credit applications, analyzed financial data, and determined creditworthiness to support risk management and decision-making. Managed a accounts, established credit terms, and proactively followed up on outstanding balances, ensuring timely payments and mitigating financial risk. Communicated with clients to address inquiries, resolve disputes, and negotiate payment arrangements, fostering positive relationships and customer satisfaction. Monitored account activity, identified potential credit risks, and collaborated with finance teams to implement effective credit solutions.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">07/2013 - 06/2014</span></div>
                      </div>
