--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		    <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            English: mother tongue
+                            <b>English:</b> mother tongue
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
