--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Swedish: beginner
+                            <b>Swedish:</b> beginner
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Japanese: beginner
+                            <b>Japanese:</b> beginner
                         </li>
 		    </ul>
                 </div>
