Updated more job descriptions

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Library Student Assistant 3 and Digital Collections Student Assistant</h3>
                             <div class="subheading mb-3">University of Oregon, Knight Library, Eugene, OR</div>
-                            <p>Job description coming soon.</p>
+                            <p>Provided advanced support for library operations and patron services. Assisted users with research inquiries and guided them in using library resources and databases. Performed cataloging, organizing, and shelving of library materials. Managed circulation tasks, including check-in/check-out and handling overdue items. Trained and mentored junior student assistants. Helped coordinate library events and outreach initiatives.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2010 - 09/2012</span></div>
                      </div>
