Job description update

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student Services Assistant</h3>
                             <div class="subheading mb-3">Mesa Community College, Student Services Office, Mesa, AZ</div>
-                            <p>Job description coming soon.</p>
+                            <p>Assisted students with tuition payment processing and provided information on payment options. Processed tuition payments, fee waivers, and refunds in compliance with college policies. Maintained accurate records of transactions and student account balances. Responded to inquiries related to billing, due dates, and accounts. Helped students understand financial policies and deadlines. Performed data entry and updated student accounts in the financial system. Provided exceptional customer service while handling sensitive financial information.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05/2006 - 08/2009</span></div>
                       </div>
