Little more update

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a sociology nerd, I enjoy going on hikes and exploring nature.</p>
+                    <p>Apart from being a sociology nerd, I enjoy traveling, trekking through old cities, and hiking through nature.</p>
                     <p class="mb-0">When forced indoors, however, I enjoy reading sociology books and sci-fi novels, listening to an eclectic combination of music, and watching the latest sci-fi films (or rewatching the classics).</p>
                 </div>
             </section>
