--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <b>Swedish:</b> beginner
+                            <b>Swedish:</b> on my way
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
