--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
 		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">A Note on Work Experience</a></li>
+		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience_note">A Note on Work Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Publications</a></li>
                 </ul>
@@ -210,7 +210,7 @@
             <hr class="m-0" />
 
 	    <!-- A Note on Work Experience-->
-            <section class="resume-section" id="A Note on Work Experience">
+            <section class="resume-section" id="experience_note">
                 <div class="resume-section-content">
                     <h2 class="mb-5">A Note on Work Experience</h2>
                     <p>My work history reflects the economic realities of being born working-class in the United States. As Matthew Desmond argues in his book <i>Poverty, by America</i>, the richest country in the world chooses to impoverish almost 40 million of its own citizens. The one thing it does not lack is resources. It could choose to end poverty within its borders if wanted to, but it chooses not to. Furthermore, the poverty rate of trans people in America is 33%, one of the highest poverty rates (if not the highest) of any group in America. Despite the progress on trans rights and cultural acceptance over the years, there is still rampant discrimination against trans people, as evidenced in the high rates of poverty and homelessness. While the U.S. frequently touts itself as a land of economic prosperity and a defender of liberty and freedom, for many trans Americans, that liberty and freedom, that economic prosperity, has remained elusive, and what we have received instead is crushing economic instability, violence, discrimination, and a lack of bodily autonomy. To add insult to injury, in recent years, right-wing political movements have used trans people as political pawns in the U.S. and elsewhere. This will only serve to exacerbate the poverty and economic precarity of trans people the world over. And unfortunately, all too often, poverty--no matter who you are--simply begets more poverty, regardless of what people do or manage to accomplish.</p>
