--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Valyn Faer Professional Career</title>
+        <title>Ophelia Faer Professional Career</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Valyn Faer</span>
+                <span class="d-block d-lg-none">Ophelia Faer</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -41,11 +41,11 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Valyn
+                        Ophelia
                         <span class="text-primary">Faer</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <a href="mailto:valyn.faer@gmail.com">valyn.faer@gmail.com</a>
+                        <a href="mailto:ophelia.faer@protonmail.com">ophelia.faer@protonmail.com</a>
                     </div>
                     <p class="lead mb-4">With a Master of Science in Sociology from Lund University, four years of experience as a Patient Access Representative, and two years of experience as a Direct Support Professional, I have developed a comprehensive understanding of patient care, client support, and the importance of fostering inclusive and accessible environments. I am eager to bring my background in sociology and extensive hands-on experience to contribute to your organization's team.
 </p>
