--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
 		    <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <b>English:</b> mother tongue
+                            <b>English:</b> Mother tongue
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <b>Swedish:</b> on my way
+                            <b>Swedish:</b> Intermediate
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <b>Japanese:</b> beginner
+                            <b>Japanese:</b> Beginner
                         </li>
 		    </ul>
                 </div>
