--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <li>Strong background in research, data analysis, and program evaluation to inform effective solutions for social challenges.</li>
 <li>Extensive experience in client relations, advocating for vulnerable populations, and supporting individuals through direct care and services.</li>
 <li>Proven ability to coordinate and manage teams, ensuring the successful execution of projects that align with organizational goals and social justice objectives.</li>
+<li>Extensive experience in administrative roles, managing records, coordinating schedules, and supporting teams to ensure smooth operations.</li>
 </ul>
 </p>
 		   <p class="lead mb-4">Seeking to transition into an NGO, human rights, research, or government role to leverage my expertise in social justice, program management, and community empowerment to drive meaningful change.
