--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:valyn.faer@gmail.com">valyn.faer@gmail.com</a>
                     </div>
-                    <p class="lead mb-4">A highly motivated and compassionate professional with a Master’s in Sociology and over 16 years of diverse experience in healthcare, direct support, and administrative roles. Adept at working in fast-paced, service-oriented environments, with a strong background in patient access, social and administrative support, and project management. Experienced in advocating for vulnerable populations, providing support to individuals with diverse needs, and conducting research to inform policy and practice. Skilled in data analysis, program coordination, client relations, stakeholder engagement, and ensuring compliance with regulatory standards. Seeking to leverage my expertise in sociology, human rights advocacy, and research to contribute to a meaningful role in an NGO, government agency, or human rights organization, where I can make a positive impact on communities and help drive social change.
+                    <p class="lead mb-4">A highly motivated and compassionate professional with a Master of Science in Sociology and over 16 years of diverse experience in healthcare, direct support, and administrative roles. Adept at working in fast-paced, service-oriented environments, with a strong background in patient access, social and administrative support, and project management. Experienced in advocating for vulnerable populations, providing support to individuals with diverse needs, and conducting research to inform policy and practice. Skilled in data analysis, program coordination, client relations, stakeholder engagement, and ensuring compliance with regulatory standards. Seeking to leverage my expertise in sociology, human rights advocacy, and research to contribute to a meaningful role in an NGO, government agency, or human rights organization, where I can make a positive impact on communities and help drive social change.
 </p>
 		   <p class="lead mb-4">Key strengths include:
 <ul>
@@ -58,7 +58,7 @@
 <li>Extensive experience in administrative roles, managing records, coordinating schedules, and supporting teams to ensure smooth operations.</li>
 </ul>
 </p>
-		   <p class="lead mb-4">Seeking to transition into an NGO, human rights, research, or government role to leverage my expertise in social justice, program management, and community empowerment to drive meaningful change.
+		   <p class="lead mb-4">Seeking to transition into an NGO, human rights, research, or government role to leverage my expertise in social science research, social justice, program management, and community empowerment to drive meaningful change.
 </p>
                 </div>
             </section>
