--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Valyn Faer Professional Career</title>
+        <title>Valyn Ophelia Faer Professional Career</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Valyn Faer</span>
+                <span class="d-block d-lg-none">Valyn Ophelia Faer</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -45,7 +45,7 @@
                         <span class="text-primary">Faer</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <a href="mailto:valyn.faer@gmail.com">valyn.faer@gmail.com</a>
+                        <a href="mailto:valyn.faer@protonmail.com">valyn.faer@protonmail.com</a>
                     </div>
                     <p class="lead mb-4">A highly motivated and compassionate professional with a Master of Science in Sociology and over 14 years of diverse experience in healthcare, direct support, and administrative roles. Adept at working in fast-paced, service-oriented environments, with a strong background in patient access, social and administrative support, and project management. Experienced in advocating for vulnerable populations, providing support to individuals with diverse needs, and conducting research to inform policy and practice. Skilled in data analysis (qualitative and quantitative), program coordination, project management, client relations, stakeholder engagement, and ensuring compliance with regulatory standards. Seeking to leverage my expertise in sociology, human rights advocacy, and research to contribute to a meaningful role where I can make a positive impact on communities and help drive social change.
 </p>
