--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <li>Extensive experience in administrative roles, managing records, coordinating schedules, and supporting teams to ensure smooth operations.</li>
 </ul>
 </p>
-		   <p class="lead mb-4">Seeking to transition into an NGO, human rights, research, project management, or government role to leverage my expertise and drive meaningful change.
+		   <p class="lead mb-4">Seeking to transition into an NGO, human rights, human resources, analysis, consulting, research, project management, or a government role to leverage my expertise and drive meaningful change.
 </p>
                 </div>
             </section>
