--- a/index.html
+++ b/index.html
@@ -163,18 +163,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Direct Support Professional</h3>
-                            <div class="subheading mb-3">Alvord Taylor, Eugene, OR</div>
+                            <div class="subheading mb-3">Oregon Supported Living Program and Alvord Taylor, Eugene, OR</div>
                             <p>Delivered personalized support to individuals with disabilities, assisting with daily living activities, medication management, and mobility to enhance their independence and well-being. Implemented individualized care plans, facilitated skill-building exercises, and provided emotional support to help clients achieve personal goals and build confidence. Maintained a safe and positive environment by monitoring health and behavioral needs, documenting progress, and collaborating closely with healthcare and support teams to improve clients' quality of life and community integration.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">09/2017 - 11/2017</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Direct Support Professional</h3>
-                            <div class="subheading mb-3">Oregon Supported Living Program, Eugene, OR</div>
-                            <p>Delivered personalized support to individuals with disabilities, assisting with daily living activities, medication management, and mobility to enhance their independence and well-being. Implemented individualized care plans, facilitated skill-building exercises, and provided emotional support to help clients achieve personal goals and build confidence. Maintained a safe and positive environment by monitoring health and behavioral needs, documenting progress, and collaborating closely with healthcare and support teams to improve clients' quality of life and community integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">01/2016 - 10/2017</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">01/2016 - 11/2017</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -194,7 +186,7 @@
                      </div>
 		     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Library Student Assistant 3 and Digital Collections Student Assistant</h3>
+                            <h3 class="mb-0">Library Student Assistant 3</h3>
                             <div class="subheading mb-3">University of Oregon, Knight Library, Eugene, OR</div>
                             <p>Provided advanced support for library operations and patron services. Assisted users with research inquiries and guided them in using library resources and databases. Performed cataloging, organizing, and shelving of library materials. Managed circulation tasks, including check-in/check-out and handling overdue items. Trained and mentored junior student assistants. Helped coordinate library events and outreach initiatives.</p>
                         </div>
@@ -203,7 +195,7 @@
 		     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student Services Assistant</h3>
-                            <div class="subheading mb-3">Mesa Community College, Student Services Office, Mesa, AZ</div>
+                            <div class="subheading mb-3">Mesa Community College, Cashier's Office, Mesa, AZ</div>
                             <p>Assisted students with tuition payment processing and provided information on payment options. Processed tuition payments, fee waivers, and refunds in compliance with college policies. Maintained accurate records of transactions and student account balances. Responded to inquiries related to billing, due dates, and accounts. Helped students understand financial policies and deadlines. Performed data entry and updated student accounts in the financial system. Provided exceptional customer service while handling sensitive financial information.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05/2006 - 08/2009</span></div>
