--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                             <h3 class="mb-0">Lund University</h3>
                             <div class="subheading mb-3">Master of Science in Sociology</div>
                             <div>Research focus: women, gender studies, and transgender studies</div>
+							<div>Skills: quantitative and qualitative research and analysis; project design and management; interviews, focus groups, and surveys</div>
                             <p></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2022 - 2024</span></div>
