--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Career Break</h3>
-                           <p>Job market severely impacted by economic downturn. Took the opportunity to continue to enhance my marketable skills through online courses, currently studying for AML certification. </p>
+                           <p>Job market severely impacted by economic downturn. Post-graduation, took the opportunity to continue to enhance my marketable skills through online courses. Currently studying for AML certification. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">07/2024 - Current</span></div>
                     </div>
