--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09/2018 - 07/2022</span></div>
                     </div>
+
+					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Career Break</h3>
+                           <p>JExtended medical leave due to health issues. Took the opportunity to transition into a new field to gain additional marketable skills. </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">11/2017 - 09/2018</span></div>
+                    </div>
+					
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Direct Support Professional</h3>
