--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Valyn
+                        Valyn Ophelia
                         <span class="text-primary">Faer</span>
                     </h1>
                     <div class="subheading mb-5">
