--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Interviewer and Data Collector</h3>
+                            <h3 class="mb-0">Survey Research Analyst</h3>
                             <div class="subheading mb-3">Venture Data, Eugene, OR</div>
                             <p>Conducted structured phone interviews for market research and public opinion surveys, gathering accurate and comprehensive data from diverse respondent groups across various demographics. Ensured adherence to survey protocols by delivering questions with clarity, neutrality, and consistency, while actively engaging respondents to maintain a high response rate and data quality. Recorded and organized responses with attention to detail, safeguarding confidentiality and data integrity. Collaborated with research teams to support data-driven insights and client decision-making through rigorous data collection standards.</p>
                         </div>
